--- a/index.html
+++ b/index.html
@@ -4,79 +4,182 @@
     <meta charset="utf-8" />
     <!-- Required meta tags -->
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/style/bootstrap.min.css" />
+    <link rel="stylesheet" href="/style/index.css" />
 
     <title>Significa</title>
   </head>
   <body>
-    <!--
-      The following comment ensures that the prettier extension
-      does not mis-format this specific file
-    -->
-    <!-- prettier-ignore -->
-    Showcase
-    Services
-    About
-    Careers
-    Labs
-    Contact
-    Your go-to digital agency
-    Significa is a digital design-led agency mainly focused on Product Development.
-    Oopsie for users — Your favourite food, one click away!
-    Business Analysis, Product Management, Consultancy & 5 others
-    Opennode — Bitcoin, for everyday.
-    UI/UX, Front End, Front End
-    AKASHA — Open systems to expand our collective mind.
-    UI/UX, Front End, Illustration
-    We build digital products
-    Having a design-led approach to what we do defines who we are. We take on products from inception to launch, from business model to people's pocket, from wireframe to continuous deployment.
-    Strategy
-    UX research
-    Business strategy
-    Brand strategy
-    Product strategy
-    Product management
-    Product design
-    Product design
-    User experience
-    User interface
-    Brand development
-    Illustration
-    Motion & Video
-    Development
-    Development
-    Front-end engineering
-    Web-app development
-    Native app development
-    Development operations
-    View services
-    View services
-    What's new on Significa Labs
-    Automating releases for UI Kits — How to automate release logs and builds for your style guides
-    Tutorial on Medium
-    An iceberg sank the Titanic — But what’s that got to do with text hierarchy?
-    Article on Medium
-    On creating synergies — Sharing without compromising our identity
-    Article on Medium
-    Enter the Lab
-    Drop by, we're hiring.
-    We are an open-minded, open-hearted team that loves the thrill of creating exciting new projects. Drop us a line if you’re passionate and talented to do everything you set your mind to.
-    View careers
-    Legal © 2019
-    Say
-    hello@significa.co
-    (+351) 226 001 751
-    Links
-    Home
-    Showcase
-    Services
-    About
-    Careers
-    Labs
-    Contact
-    Network
-    Coletiv
-    Adamant
-    Follow us
+    <nav class="navbar navbar-expand-md navbar-light mt-4">
+      <div class="container">
+        <a href="" class="navbar-brand"
+          ><img src="/images/logo.svg" alt="significa logo"
+        /></a>
+        <button class="navbar-toggler">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="main-inner-nav">
+          <ul class="nav container-fluid justify-content-end">
+            <li class="nav-item">
+              <a href="" class="nav-link text-dark">Showcase</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link text-dark">Services</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link text-dark">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link text-dark">Careers</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link text-dark">Labs</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link text-dark">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <section class="container">
+      <div class="d-flex h-100">
+        <div class="d-flex flex-column h-100 justify-content-between">
+          <div class="h-75 d-flex align-items-center">
+            <div class="h-auto main-title d-block lh-sm fw-light">
+              Your go-to digital agency
+            </div>
+          </div>
+          <h4 class="main-subtitle fw-normal h-auto">
+            Significa is a digital design-led agency mainly focused on Product
+            Development.
+          </h4>
+        </div>
+      </div>
+    </section>
+    <section class="container p-0">
+      <section class="row container-fluid mt-5 justify-content-between">
+        <div class="card col-md-4 border-0 p-0 mx-auto">
+          <img src="/images/2.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <p class="card-text">
+              Oopsie for users — Your favourite food, one click away! Business
+              Analysis, Product Management, Consultancy & 5 others
+            </p>
+          </div>
+        </div>
+        <div class="card col-md-4 border-0 p-0 mx-auto">
+          <img src="/images/1.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <p class="card-text">
+              Opennode — Bitcoin, for everyday. UI/UX, Front End, Front End
+            </p>
+          </div>
+        </div>
+        <div class="card col-md-4 border-0 p-0 mx-auto">
+          <img src="/images/3.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <p class="card-text">
+              AKASHA — Open systems to expand our collective mind. UI/UX, Front
+              End, Illustration
+            </p>
+          </div>
+        </div>
+      </section>
+    </section>
+    <h3>We build digital products</h3>
+    <p>
+      Having a design-led approach to what we do defines who we are. We take on
+      products from inception to launch, from business model to people's pocket,
+      from wireframe to continuous deployment.
+    </p>
+    <div class="container">
+      <div>
+        <h5>Strategy</h5>
+        <ul>
+          UX research Business strategy Brand strategy Product strategy Product
+          management
+        </ul>
+      </div>
+      <div>
+        <h5>Product design</h5>
+        <ul>
+          User experience User interface Brand development Illustration Motion &
+          Video
+        </ul>
+      </div>
+      <div>
+        <h5>Development</h5>
+        <ul>
+          Front-end engineering Web-app development Native app development
+          Development operations
+        </ul>
+      </div>
+    </div>
+    <div><a href="">View services</a></div>
+    <section>
+      <div><h3>What's new on Significa Labs</h3></div>
+      <div>
+        <a href="">
+          <h6>
+            Automating releases for UI Kits — How to automate release logs and
+            builds for your style guides
+          </h6>
+          <p>Tutorial on Medium</p>
+        </a>
+        <a href="">
+          <h6>
+            An iceberg sank the Titanic — But what’s that got to do with text
+            hierarchy?
+          </h6>
+          <p>Article on Medium</p>
+        </a>
+        <a href="">
+          <h6>
+            On creating synergies — Sharing without compromising our identity
+          </h6>
+          <p>Article on Medium</p>
+        </a>
+        <a href="">Enter the Lab</a>
+      </div>
+    </section>
+    <section>
+      <div><h3>Drop by, we're hiring.</h3></div>
+      <div>
+        <p>
+          We are an open-minded, open-hearted team that loves the thrill of
+          creating exciting new projects. Drop us a line if you’re passionate
+          and talented to do everything you set your mind to.
+        </p>
+        <a href="">View careers</a>
+      </div>
+      <div>IMAGES</div>
+    </section>
+
+    <footer>
+      <div class="container-flui">
+        <div class="row">
+          <div class="column">Legal © 2019</div>
+          <div>
+            <div class="column">Say hello@significa.co (+351) 226 001 751</div>
+            <div class="column">
+              Links Home Showcase Services About Careers Labs Contact
+            </div>
+            <div class="column">Network Coletiv Adamant</div>
+            <div class="column">Follow us</div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
