--- a/index.html
+++ b/index.html
@@ -69,29 +69,32 @@
     </section>
     <section class="container p-0">
       <section class="row container-fluid mt-5 justify-content-between">
-        <div class="card col-md-4 border-0 p-0 mx-auto">
+        <div class="card col-md border-0 p-0 mx-auto flex-grow-1">
           <img src="/images/2.png" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <p class="card-text">
-              Oopsie for users — Your favourite food, one click away! Business
-              Analysis, Product Management, Consultancy & 5 others
+          <div class="card-body ps-0">
+            <p class="card-text mb-1">
+              <p class="fs-5 mb-2">Oopsie for users — Your favourite food, one click away!</p>  
+              <p class="fs-6">Business
+              Analysis, Product Management, Consultancy & 5 others</p>
             </p>
           </div>
         </div>
-        <div class="card col-md-4 border-0 p-0 mx-auto">
+        <div class="card col-md border-0 p-0 px-5 mx-auto flex-grow-1">
           <img src="/images/1.png" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <p class="card-text">
-              Opennode — Bitcoin, for everyday. UI/UX, Front End, Front End
+          <div class="card-body ps-0">
+            <p class="card-text mb-1">
+              <p class="fs-5 mb-2">Opennode — Bitcoin, for everyday.</p> 
+              <p class="fs-6">UI/UX, Front End, Front End</p>
             </p>
           </div>
         </div>
-        <div class="card col-md-4 border-0 p-0 mx-auto">
+        <div class="card col-md border-0 p-0 mx-auto flex-grow-1">
           <img src="/images/3.png" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <p class="card-text">
-              AKASHA — Open systems to expand our collective mind. UI/UX, Front
-              End, Illustration
+          <div class="card-body ps-0">
+            <p class="card-text mb-1">
+              <p class="fs-5 mb-2">AKASHA — Open systems to expand our collective mind.</p>  
+              <p class="fs-6">I/UX, Front End, Illustration</p>
+              
             </p>
           </div>
         </div>
