fix cards overflow

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         </div>
       </div>
     </section>
-    <section class="container p-0">
-      <section class="row container-fluid mt-5 justify-content-between">
+    <section class="container p-0 ">
+      <section class="row container-fluid mt-5 justify-content-between h-auto">
         <div class="card col-md border-0 p-0 mx-auto flex-grow-1">
           <img src="/images/2.png" class="card-img-top" alt="..." />
           <div class="card-body ps-0">
@@ -100,6 +100,7 @@
         </div>
       </section>
     </section>
+    <section class="container">
     <h3>We build digital products</h3>
     <p>
       Having a design-led approach to what we do defines who we are. We take on
@@ -130,6 +131,7 @@
       </div>
     </div>
     <div><a href="">View services</a></div>
+  </section>
     <section>
       <div><h3>What's new on Significa Labs</h3></div>
       <div>
@@ -170,7 +172,7 @@
     </section>
 
     <footer>
-      <div class="container-flui">
+      <div class="container-fluid">
         <div class="row">
           <div class="column">Legal © 2019</div>
           <div>
