--- a/index.html
+++ b/index.html
@@ -60,27 +60,28 @@
               Your go-to digital agency
             </div>
           </div>
-          <h4 class="main-subtitle fw-normal h-auto">
+          <p class="main-subtitle fw-normal h-auto">
             Significa is a digital design-led agency mainly focused on Product
             Development.
-          </h4>
+          </p>
         </div>
       </div>
     </section>
-    <section class="container p-0 ">
+    <section class="container p-0 mb-5">
       <section class="row container-fluid mt-5 justify-content-between h-auto">
-        <div class="card col-md border-0 p-0 mx-auto flex-grow-1">
-          <img src="/images/2.png" class="card-img-top" alt="..." />
-          <div class="card-body ps-0">
-            <p class="card-text mb-1">
-              <p class="fs-5 mb-2">Oopsie for users — Your favourite food, one click away!</p>  
-              <p class="fs-6">Business
-              Analysis, Product Management, Consultancy & 5 others</p>
-            </p>
+        <div class="card col-md border-0 p-0 flex-grow-1"> 
+          <div class="card border-0 p-0">
+            <img src="/images/2.png" class="shadow card-img-top" alt="..." />
+            <div class="card-body ps-0">
+              <p class="card-text mb-1">
+                <p class="fs-5 mb-2">Oopsie for users — Your favourite food, one click away!</p>  
+                <p class="fs-6">Business Analysis, Product Management, Consultancy & 5 others</p>
+              </p>
+            </div>
           </div>
         </div>
-        <div class="card col-md border-0 p-0 px-5 mx-auto flex-grow-1">
-          <img src="/images/1.png" class="card-img-top" alt="..." />
+        <div class="card col-md border-0 p-0 mx-5 flex-grow-1">
+          <img src="/images/1.png" class="shadow card-img-top" alt="..." />
           <div class="card-body ps-0">
             <p class="card-text mb-1">
               <p class="fs-5 mb-2">Opennode — Bitcoin, for everyday.</p> 
@@ -88,8 +89,8 @@
             </p>
           </div>
         </div>
-        <div class="card col-md border-0 p-0 mx-auto flex-grow-1">
-          <img src="/images/3.png" class="card-img-top" alt="..." />
+        <div class="card col-md border-0 p-0 flex-grow-1">
+          <img src="/images/3.png" class="shadow card-img-top" alt="..." />
           <div class="card-body ps-0">
             <p class="card-text mb-1">
               <p class="fs-5 mb-2">AKASHA — Open systems to expand our collective mind.</p>  
@@ -100,63 +101,71 @@
         </div>
       </section>
     </section>
-    <section class="container">
-    <h3>We build digital products</h3>
-    <p>
-      Having a design-led approach to what we do defines who we are. We take on
-      products from inception to launch, from business model to people's pocket,
-      from wireframe to continuous deployment.
-    </p>
-    <div class="container">
-      <div>
+    <section class="container mt-5">
+      <div class="row mb-5">
+        <div class="col-sm-5">
+          <p class="second-subtitle fw-light">We build digital products</p>
+        </div>
+        <p class="col-sm-7 fs-5">
+        Having a design-led approach to what we do defines who we are. We take on
+        products from inception to launch, from business model to people's pocket,
+        from wireframe to continuous deployment.
+        </p>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-md-4 container-fluid justify-content-center">
         <h5>Strategy</h5>
-        <ul>
-          UX research Business strategy Brand strategy Product strategy Product
-          management
+        <ul class="list-group list-group-flush lh-1 mb-4">
+          <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>UX research</li>
+          <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>Business strategy</li>
+          <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>Brand strategy</li>
+          <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>Product strategy</li>
+          <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>Product management</li>
         </ul>
       </div>
-      <div>
+      <div class="col-md-4">
         <h5>Product design</h5>
-        <ul>
-          User experience User interface Brand development Illustration Motion &
-          Video
-        </ul>
+          <ul class="list-group list-group-flush lh-1 mb-4">
+            <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>User experience</li>
+            <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>User interface</li>
+            <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>Brand development</li>
+            <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>Illustration</li>
+            <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>Motion & Video</li>
+          </ul>
       </div>
-      <div>
+      <div class="col-md-4">
         <h5>Development</h5>
-        <ul>
-          Front-end engineering Web-app development Native app development
-          Development operations
+        <ul class="list-group list-group-flush lh-1 mb-4">
+          <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>Front-end engineering</li>
+          <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>Web-app development</li>
+          <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>Native app development</li>
+          <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>Development operations</li>
         </ul>
       </div>
     </div>
     <div><a href="">View services</a></div>
   </section>
-    <section>
+    <section class="bg-dark text-light">
+      <div class="dark-section-max">
       <div><h3>What's new on Significa Labs</h3></div>
       <div>
-        <a href="">
           <h6>
             Automating releases for UI Kits — How to automate release logs and
             builds for your style guides
           </h6>
           <p>Tutorial on Medium</p>
-        </a>
-        <a href="">
           <h6>
             An iceberg sank the Titanic — But what’s that got to do with text
             hierarchy?
           </h6>
           <p>Article on Medium</p>
-        </a>
-        <a href="">
           <h6>
             On creating synergies — Sharing without compromising our identity
           </h6>
           <p>Article on Medium</p>
-        </a>
         <a href="">Enter the Lab</a>
       </div>
+    </div>
     </section>
     <section>
       <div><h3>Drop by, we're hiring.</h3></div>
@@ -170,7 +179,6 @@
       </div>
       <div>IMAGES</div>
     </section>
-
     <footer>
       <div class="container-fluid">
         <div class="row">
