complete dark section

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="d-flex h-100">
         <div class="d-flex flex-column h-100 justify-content-between">
           <div class="h-75 d-flex align-items-center">
-            <div class="h-auto main-title d-block lh-sm fw-light">
+            <div class="fs-1 h-auto main-title d-block lh-sm fw-light">
               Your go-to digital agency
             </div>
           </div>
@@ -101,7 +101,7 @@
         </div>
       </section>
     </section>
-    <section class="container mt-5">
+    <section class="container mt-5 mb-5">
       <div class="row mb-5">
         <div class="col-sm-5">
           <p class="second-subtitle fw-light">We build digital products</p>
@@ -112,62 +112,81 @@
         from wireframe to continuous deployment.
         </p>
     </div>
-    <div class="row justify-content-center">
-      <div class="col-md-4 container-fluid justify-content-center">
-        <h5>Strategy</h5>
-        <ul class="list-group list-group-flush lh-1 mb-4">
-          <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>UX research</li>
-          <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>Business strategy</li>
-          <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>Brand strategy</li>
-          <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>Product strategy</li>
-          <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>Product management</li>
+    <div class="row justify-content-center mb-5 pb-5">
+      <div class="col-md-3">
+        <div class="w-100">
+        <h5 class="ps-3">Strategy</h5>
+        <ul class="list-group list-group-flush lh-1 mb-4 w-auto">
+          <li class="list-group-item border-0 "><span class="text-primary position-absolute blue-line">- </span>UX research</li>
+          <li class="list-group-item border-0"><span class="text-primary position-absolute blue-line">- </span>Business strategy</li>
+          <li class="list-group-item border-0"><span class="text-primary position-absolute blue-line">- </span>Brand strategy</li>
+          <li class="list-group-item border-0"><span class="text-primary position-absolute blue-line">- </span>Product strategy</li>
+          <li class="list-group-item border-0"><span class="text-primary position-absolute blue-line">- </span>Product management</li>
         </ul>
       </div>
-      <div class="col-md-4">
-        <h5>Product design</h5>
+      </div>
+      <div class="col-md-3">
+        <div class="w-100">
+        <h5 class="ps-3">Product design</h5>
           <ul class="list-group list-group-flush lh-1 mb-4">
-            <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>User experience</li>
-            <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>User interface</li>
-            <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>Brand development</li>
-            <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>Illustration</li>
-            <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>Motion & Video</li>
+            <li class="list-group-item border-0"><span class="text-primary position-absolute blue-line">- </span>User experience</li>
+            <li class="list-group-item border-0"><span class="text-primary position-absolute blue-line">- </span>User interface</li>
+            <li class="list-group-item border-0"><span class="text-primary position-absolute blue-line">- </span>Brand development</li>
+            <li class="list-group-item border-0"><span class="text-primary position-absolute blue-line">- </span>Illustration</li>
+            <li class="list-group-item border-0"><span class="text-primary position-absolute blue-line">- </span>Motion & Video</li>
           </ul>
+          </div>
       </div>
-      <div class="col-md-4">
-        <h5>Development</h5>
-        <ul class="list-group list-group-flush lh-1 mb-4">
-          <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>Front-end engineering</li>
-          <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>Web-app development</li>
-          <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>Native app development</li>
-          <li class="list-group-item border-0 ps-0"><span class="text-primary position-absolute blue-line">- </span>Development operations</li>
+      <div class="col-md-3">
+        <div class="w-100">
+        <h5 class="ps-3">Development</h5>
+        <ul class="list-group list-group-flush lh-1 mb-4 ">
+          <li class="list-group-item border-0"><span class="text-primary position-absolute blue-line">- </span>Front-end engineering</li>
+          <li class="list-group-item border-0"><span class="text-primary position-absolute blue-line">- </span>Web-app development</li>
+          <li class="list-group-item border-0"><span class="text-primary position-absolute blue-line">- </span>Native app development</li>
+          <li class="list-group-item border-0"><span class="text-primary position-absolute blue-line">- </span>Development operations</li>
         </ul>
+      </div>
       </div>
     </div>
-    <div><a href="">View services</a></div>
+    <div class="text-center mb-5 pb-5"><a href="" class="text-decoration-none">View services</a> <svg class=" text-primary" width="14" height="10" xmlns="http://www.w3.org/2000/svg"><g stroke="#111314" fill="none" fill-rule="evenodd"><path d="M8.5.964L13.036 5.5 8.5 10.036"></path><path d="M12.5 5.5H.5" stroke-linecap="square"></path></g></svg></div>
   </section>
-    <section class="bg-dark text-light">
-      <div class="dark-section-max">
-      <div><h3>What's new on Significa Labs</h3></div>
-      <div>
-          <h6>
+  <section class="bg-dark h-auto pt-5" >
+    <section class="container h-auto text-light pt-5 pb-5">
+      <div class="row h-auto">
+        <div class="col-sm-5">
+          <p class="second-subtitle fw-light">What's new on Significa Labs</p>
+        </div>
+      <div class="col-sm-6">
+        <ul class="list-group">
+          <li class="px-0 list-group-item bg-dark text-light mb-2 pb-4 border-secondary border-top-0 border-start-0 border-end-0">
+          <h6 class="fs-5"><span class="text-primary position-absolute medium-logo"><svg width="18" height="18" xmlns="http://www.w3.org/2000/svg" class=""><path d="M3 0h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H3a3 3 0 0 1-3-3V3a3 3 0 0 1 3-3zm1.423 6.04v5.567a.662.662 0 0 1-.162.553L3 13.765v.211h3.574v-.211l-1.26-1.605a.685.685 0 0 1-.174-.553V6.792l3.137 7.184h.364l2.695-7.184v5.727c0 .152 0 .182-.095.282l-.97.987V14h4.707v-.212l-.936-.964a.301.301 0 0 1-.106-.282V5.458a.301.301 0 0 1 .106-.282L15 4.212V4h-3.317L9.32 10.19 6.63 4H3.151v.212l1.12 1.416c.11.105.167.257.152.412z" fill="#fff" fill-rule="evenodd"></path></svg></span>
             Automating releases for UI Kits — How to automate release logs and
             builds for your style guides
           </h6>
-          <p>Tutorial on Medium</p>
-          <h6>
+          <p class="fs-6 ">Tutorial on Medium</p>
+        </li>
+        <li class="px-0 list-group-item bg-dark text-light mb-2 pb-4 border-secondary border-top-0 border-start-0 border-end-0">
+          <h6 class="fs-5"><span class="text-primary position-absolute medium-logo"><svg width="18" height="18" xmlns="http://www.w3.org/2000/svg" class=""><path d="M3 0h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H3a3 3 0 0 1-3-3V3a3 3 0 0 1 3-3zm1.423 6.04v5.567a.662.662 0 0 1-.162.553L3 13.765v.211h3.574v-.211l-1.26-1.605a.685.685 0 0 1-.174-.553V6.792l3.137 7.184h.364l2.695-7.184v5.727c0 .152 0 .182-.095.282l-.97.987V14h4.707v-.212l-.936-.964a.301.301 0 0 1-.106-.282V5.458a.301.301 0 0 1 .106-.282L15 4.212V4h-3.317L9.32 10.19 6.63 4H3.151v.212l1.12 1.416c.11.105.167.257.152.412z" fill="#fff" fill-rule="evenodd"></path></svg></span>
             An iceberg sank the Titanic — But what’s that got to do with text
             hierarchy?
           </h6>
           <p>Article on Medium</p>
-          <h6>
+        </li>
+        <li class="list-group-item px-0 bg-dark text-light mb-2 pb-4 border-secondary border-top-0 border-start-0 border-end-0">
+          <h6 class="fs-5"><span class="text-primary position-absolute medium-logo"><svg width="18" height="18" xmlns="http://www.w3.org/2000/svg" class=""><path d="M3 0h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H3a3 3 0 0 1-3-3V3a3 3 0 0 1 3-3zm1.423 6.04v5.567a.662.662 0 0 1-.162.553L3 13.765v.211h3.574v-.211l-1.26-1.605a.685.685 0 0 1-.174-.553V6.792l3.137 7.184h.364l2.695-7.184v5.727c0 .152 0 .182-.095.282l-.97.987V14h4.707v-.212l-.936-.964a.301.301 0 0 1-.106-.282V5.458a.301.301 0 0 1 .106-.282L15 4.212V4h-3.317L9.32 10.19 6.63 4H3.151v.212l1.12 1.416c.11.105.167.257.152.412z" fill="#fff" fill-rule="evenodd"></path></svg></span>
             On creating synergies — Sharing without compromising our identity
           </h6>
           <p>Article on Medium</p>
-        <a href="">Enter the Lab</a>
+        </li>
+        </ul>
       </div>
+      <div class="text-center  pt-5 mb-5 pb-5"><a href="" class="text-secondary text-decoration-none">Enter the Lab <svg class=" text-secondary" width="14" height="10" xmlns="http://www.w3.org/2000/svg"><g stroke="#f8f9fa" fill="none" fill-rule="evenodd"><path d="M8.5.964L13.036 5.5 8.5 10.036"></path><path d="M12.5 5.5H.5" stroke-linecap="square"></path></g></svg></a></div>
     </div>
     </section>
-    <section>
+  </section>
+    <section class="container">
+      <div>
       <div><h3>Drop by, we're hiring.</h3></div>
       <div>
         <p>
@@ -178,6 +197,7 @@
         <a href="">View careers</a>
       </div>
       <div>IMAGES</div>
+    </div>
     </section>
     <footer>
       <div class="container-fluid">
