--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <section class="container p-0 mb-5">
       <section class="row container-fluid mt-5 justify-content-between h-auto">
         <div class="card col-md border-0 p-0 flex-grow-1"> 
-          <div class="card border-0 p-0">
+          <div class=" first-card card border-0 p-0">
             <img src="/images/2.png" class="shadow card-img-top" alt="..." />
             <div class="card-body ps-0">
               <p class="card-text mb-1">
@@ -80,7 +80,7 @@
             </div>
           </div>
         </div>
-        <div class="card col-md border-0 p-0 mx-5 flex-grow-1">
+        <div class="first-card card col-md border-0 p-0 mx-5 flex-grow-1">
           <img src="/images/1.png" class="shadow card-img-top" alt="..." />
           <div class="card-body ps-0">
             <p class="card-text mb-1">
@@ -89,19 +89,18 @@
             </p>
           </div>
         </div>
-        <div class="card col-md border-0 p-0 flex-grow-1">
+        <div class="first-card card col-md border-0 p-0 flex-grow-1">
           <img src="/images/3.png" class="shadow card-img-top" alt="..." />
           <div class="card-body ps-0">
             <p class="card-text mb-1">
               <p class="fs-5 mb-2">AKASHA — Open systems to expand our collective mind.</p>  
               <p class="fs-6">I/UX, Front End, Illustration</p>
-              
             </p>
           </div>
         </div>
       </section>
     </section>
-    <section class="container mt-5 mb-5">
+    <section class="container mt-5 mb-5 pt-5">
       <div class="row mb-5">
         <div class="col-sm-5">
           <p class="second-subtitle fw-light">We build digital products</p>
@@ -149,7 +148,7 @@
       </div>
       </div>
     </div>
-    <div class="text-center mb-5 pb-5"><a href="" class="text-decoration-none">View services</a> <svg class=" text-primary" width="14" height="10" xmlns="http://www.w3.org/2000/svg"><g stroke="#111314" fill="none" fill-rule="evenodd"><path d="M8.5.964L13.036 5.5 8.5 10.036"></path><path d="M12.5 5.5H.5" stroke-linecap="square"></path></g></svg></div>
+    <div class="text-center mb-5 pb-5"><a href="" class="text-decoration-none">View services</a> <svg class=" text-primary" width="14" height="10" xmlns="http://www.w3.org/2000/svg"><g stroke="#116eff" fill="none" fill-rule="evenodd"><path d="M8.5.964L13.036 5.5 8.5 10.036"></path><path d="M12.5 5.5H.5" stroke-linecap="square"></path></g></svg></div>
   </section>
   <section class="bg-dark h-auto pt-5" >
     <section class="container h-auto text-light pt-5 pb-5">
@@ -185,31 +184,85 @@
     </div>
     </section>
   </section>
-    <section class="container">
-      <div>
-      <div><h3>Drop by, we're hiring.</h3></div>
-      <div>
-        <p>
+    <section class="container pt-5">
+      <div class="row pt-5">
+        <div class="col-sm-5 pt-5">
+          <p class="second-subtitle fw-light pb-0 mb-0 ">Drop by,</p>
+          <p class="second-subtitle fw-light pt-0 mt-0 lh-2">we're hiring.</p>
+        </div>
+        <p class="col-sm-7  pt-5 fs-5">
           We are an open-minded, open-hearted team that loves the thrill of
           creating exciting new projects. Drop us a line if you’re passionate
           and talented to do everything you set your mind to.
-        </p>
-        <a href="">View careers</a>
+          </p>
+      <div class="text-center  pt-5 mb-5 pb-5">
+        <a class="text-decoration-none" href="">View careers <svg class="" width="14" height="10" xmlns="http://www.w3.org/2000/svg"><g stroke="#116eff" fill="none" fill-rule="evenodd"><path d="M8.5.964L13.036 5.5 8.5 10.036"></path><path d="M12.5 5.5H.5" stroke-linecap="square"></path></g></svg></a>
       </div>
-      <div>IMAGES</div>
     </div>
     </section>
-    <footer>
+    <section class="container p-0 pb-5 mb-5">
+      <section class="row container-fluid mt-5 justify-content-between h-auto">
+        <div class="card col-md border-0 p-0 flex-grow-1"> 
+          <div class=" second-card card border-0 p-0">
+            <img src="/images/4.png" class="shadow card-img-top" alt="..." />
+          </div>
+        </div>
+        <div class="second-card card col-md border-0 p-0 mx-5 flex-grow-1">
+          <img src="/images/5.png" class="shadow card-img-top" alt="..." />
+
+        </div>
+        <div class="second-card card col-md border-0 p-0 flex-grow-1">
+          <img src="/images/6.png" class="shadow card-img-top" alt="..." />
+        </div>
+      </section>
+    </section>
+    <footer class="p-1 pb-5 container ">
       <div class="container-fluid">
         <div class="row">
-          <div class="column">Legal © 2019</div>
-          <div>
-            <div class="column">Say hello@significa.co (+351) 226 001 751</div>
-            <div class="column">
-              Links Home Showcase Services About Careers Labs Contact
+          <div class="col-md-4  d-flex flex-column">
+            <h6 class="pb-3">
+              <a class="" href=""><svg width="17" height="20" xmlns="http://www.w3.org/2000/svg" class="sc-bwzfXH bBtzOf"><path d="M8.5 20C3.814 20 0 16.304 0 11.725 0 6.562 4.104 0 8.5 0S17 6.562 17 11.725C17 16.305 13.186 20 8.5 20zm0-1.887c3.671 0 6.632-2.869 6.632-6.388 0-4.251-3.494-9.838-6.632-9.838-3.138 0-6.632 5.587-6.632 9.838 0 3.52 2.96 6.388 6.632 6.388z" fill-rule="nonzero"></path></svg></a>
+            </h6>
+            <div>
+            <p class="mb-5"><span class="text-decoration-underline">Legal</span> © 2019
+            </p>
+          </div>
             </div>
-            <div class="column">Network Coletiv Adamant</div>
-            <div class="column">Follow us</div>
+          <div class="col-md-8 row flex-wrap">
+            <div class="col-md-3  d-flex flex-column">
+              <h6 class="pb-3">Say</h6>
+              <a href="" class="pb-2 d-block text-decoration-none text-dark">hello@significa.co</a>
+              <a href="" class=" mb-5 pb-2 d-block text-decoration-none text-dark">(+351) 226 001 751</a>  
+            </div>
+            <div class="col-md-3 d-flex flex-column">
+              <h6 class="pb-3">Links</h6>
+              <div class="">
+                <a href="" class="pb-2 d-block text-decoration-none text-dark text-black-50">Home</a>
+                <a href="" class="pb-2 d-block text-decoration-none text-dark">Showcase</a>
+                <a href="" class="pb-2 d-block text-decoration-none text-dark ">Services</a>
+                <a href="" class="pb-2 d-block text-decoration-none text-dark ">About</a>
+                <a href="" class="pb-2 d-block text-decoration-none text-dark ">Careers</a>
+                <a href="" class="pb-2 d-block text-decoration-none text-dark ">Labs</a>
+                <a href="" class="pb-2 d-block text-decoration-none text-dark ">Contact</a>
+              </div>      
+            </div>
+            <div class="col-md-3  d-flex flex-column">
+              <h6 class="pb-3">Network</h6>
+              <div>
+                <a href="" class="pb-2 d-block text-decoration-none text-dark ">Coletiv</a>
+                <a href="" class="pb-2 d-block text-decoration-none text-dark ">Adamant</a>
+            </div>
+            </div>
+            <div class="col-md-3">
+              <h6 class="pb-3">Follow us</h6>
+              <div class="">
+                <a href=""  class="pe-2" ><svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" ><path d="M18.64 4.992a9.946 9.946 0 0 0-3.636-3.636C13.474.463 11.802.016 9.99.016c-1.813 0-3.484.447-5.015 1.34A9.945 9.945 0 0 0 1.34 4.992C.447 6.522 0 8.194 0 10.006c0 2.177.635 4.134 1.906 5.873 1.27 1.738 2.911 2.941 4.923 3.61.234.043.407.012.52-.092a.509.509 0 0 0 .169-.39l-.007-.702c-.004-.443-.006-.829-.006-1.158l-.3.052c-.19.035-.43.05-.721.046a5.5 5.5 0 0 1-.904-.092 2.02 2.02 0 0 1-.872-.39 1.65 1.65 0 0 1-.572-.8l-.13-.299a3.25 3.25 0 0 0-.41-.663c-.186-.243-.375-.407-.565-.494l-.092-.065a.955.955 0 0 1-.169-.156.714.714 0 0 1-.117-.183c-.026-.06-.004-.11.065-.15.07-.039.195-.058.378-.058l.26.04c.173.034.388.138.644.311a2.1 2.1 0 0 1 .63.677c.2.355.44.626.722.813.282.186.566.28.852.28.286 0 .533-.022.742-.066.208-.043.403-.108.585-.195.078-.581.29-1.028.637-1.34a8.906 8.906 0 0 1-1.333-.234 5.308 5.308 0 0 1-1.223-.507 3.502 3.502 0 0 1-1.047-.872c-.277-.347-.505-.802-.683-1.366-.177-.563-.266-1.214-.266-1.95 0-1.05.342-1.943 1.028-2.68-.321-.79-.291-1.674.09-2.653.252-.079.625-.02 1.12.175.493.195.855.362 1.085.5.23.14.414.257.553.352a9.236 9.236 0 0 1 2.497-.338c.859 0 1.691.113 2.498.338l.494-.312a7 7 0 0 1 1.197-.572c.46-.174.81-.221 1.054-.143.39.98.425 1.864.104 2.653.685.737 1.027 1.63 1.027 2.68 0 .737-.089 1.389-.266 1.957-.178.568-.408 1.023-.69 1.366a3.636 3.636 0 0 1-1.053.865c-.42.234-.829.403-1.223.507a8.897 8.897 0 0 1-1.333.235c.45.39.676 1.005.676 1.846v2.745c0 .156.054.286.163.39.108.104.28.134.513.09 2.012-.667 3.654-1.87 4.924-3.609 1.27-1.738 1.905-3.696 1.905-5.872 0-1.812-.447-3.484-1.34-5.014z" fill="#111314" fill-rule="nonzero"></path></svg></a>
+                <a href="" class="pe-2" ><svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" ><path d="M9.98 0C4.466 0 0 4.468 0 9.98c0 5.51 4.467 9.979 9.98 9.979 5.51 0 9.978-4.468 9.979-9.979 0-5.512-4.468-9.98-9.98-9.98zm6.114 5.174a7.729 7.729 0 0 1 1.66 4.44 15.375 15.375 0 0 0-3.183-.356h-.008c-.799 0-1.549.072-2.255.198-.172-.421-.346-.825-.521-1.213 1.573-.69 3.084-1.673 4.307-3.069zm-6.115-2.98c1.837 0 3.521.642 4.855 1.71-1.02 1.223-2.368 2.108-3.823 2.733C9.988 4.659 9 3.245 8.325 2.38a7.62 7.62 0 0 1 1.654-.186zm-3.439.812c.54.638 1.623 2.042 2.778 4.234-2.35.7-4.717.864-6.149.864h-.122c-.241 0-.448-.005-.622-.01A7.81 7.81 0 0 1 6.54 3.006zM2.193 9.98c0-.037.002-.074.004-.112.222.008.507.015.85.015h.002c1.565-.01 4.298-.14 7.067-1.015.151.33.3.674.448 1.03a12.321 12.321 0 0 0-4.383 2.586 13.28 13.28 0 0 0-2.147 2.504 7.736 7.736 0 0 1-1.84-5.008zm7.786 7.786a7.732 7.732 0 0 1-4.625-1.534 11.23 11.23 0 0 1 1.806-2.224 10.589 10.589 0 0 1 4.046-2.45 38.406 38.406 0 0 1 1.537 5.698c-.86.328-1.79.51-2.764.51zm4.407-1.382a40.039 40.039 0 0 0-1.437-5.232 11.215 11.215 0 0 1 1.596-.114h.023c.929 0 1.95.116 3.056.367a7.783 7.783 0 0 1-3.238 4.979z" fill="#111314" fill-rule="nonzero"></path></svg></a>
+                <a href="" class="pe-2"><svg width="20" height="14" xmlns="http://www.w3.org/2000/svg"><path d="M8.07 5.9l.947-.36c.632-.242.948-.935.948-2.082 0-1.159-.339-2.025-1.016-2.598C8.27.287 7.438 0 6.448 0H0v12.935h6.448l.615-.04c.41-.026.863-.156 1.358-.39.495-.235.948-.61 1.358-1.124.41-.514.615-1.267.615-2.256l-.01-.508a3.625 3.625 0 0 0-.214-1.104 3.057 3.057 0 0 0-.684-1.104c-.32-.339-.791-.508-1.417-.508zM2.852 2.307h3.595l.44.166c.292.11.439.504.439 1.182 0 .664-.11 1.087-.332 1.27a1.165 1.165 0 0 1-.762.273h-3.38V2.306zm3.419 8.323h-3.42V7.19h3.596l.654.215c.437.143.655.658.655 1.544 0 .768-.183 1.24-.547 1.416-.365.176-.678.264-.938.264zm9.378-7.327c-1.185 0-2.103.257-2.755.772-.65.514-1.123 1.08-1.416 1.7-.293.618-.466 1.188-.518 1.71l-.078.78.03.773c.019.514.169 1.08.449 1.7.28.618.745 1.185 1.397 1.7.65.514 1.615.771 2.891.771l.665-.02c.442-.012.931-.117 1.465-.312s1.02-.53 1.456-1.006c.436-.476.654-1.176.654-2.1h-2.169l-.224.693c-.15.462-.74.694-1.769.694l-1.094-.225c-.73-.15-1.094-.824-1.094-2.022h6.428l.03-.88c.02-.586-.082-1.23-.303-1.934-.222-.703-.635-1.345-1.24-1.925-.607-.58-1.541-.869-2.805-.869zm1.954 3.888h-4.083l.37-.996c.248-.665.854-.997 1.818-.997.95 0 1.504.332 1.66.997l.235.996zm.508-6.428h-5.119v1.602h5.12V.762z" fill="#111314" fill-rule="evenodd"></path></svg></a>
+                <a href="" class="pe-2"><svg width="20" height="20" xmlns="http://www.w3.org/2000/svg""><path d="M0 0h20v20H0V0zm4.773 6.689v5.938a.683.683 0 0 1-.182.59l-1.412 1.712v.225h4.002v-.225l-1.41-1.712a.708.708 0 0 1-.195-.59V7.491l3.512 7.663h.408l3.017-7.663V13.6c0 .163 0 .195-.107.301l-1.085 1.054v.225h5.27v-.225l-1.048-1.029a.313.313 0 0 1-.12-.3V6.067a.313.313 0 0 1 .12-.301l1.072-1.028v-.226h-3.713l-2.647 6.603-3.01-6.603H3.348v.226l1.254 1.51a.52.52 0 0 1 .17.44z" fill="#111314" fill-rule="nonzero"></path></svg></a>
+                <a href="" class=""><svg width="20" height="20" xmlns="http://www.w3.org/2000/svg"><path d="M11.966.001c2.006 0 4.556-.113 6.382 1.7 1.825 1.814 1.647 4.322 1.647 6.328v3.922c0 2.005.16 4.735-1.647 6.54-1.807 1.805-4.376 1.487-6.382 1.487H8.043c-2.006 0-4.681.32-6.488-1.487C-.252 16.684.014 13.956.014 11.95V8.029c0-2.006-.266-4.521 1.54-6.327C3.363-.105 6.038.002 8.044.002h3.923zm.711 1.814H7.335c-1.643 0-3.064-.16-4.394 1.17-1.333 1.33-1.12 2.7-1.12 4.343v5.342c0 1.643-.21 3.032 1.12 4.362 1.331 1.329 2.75 1.152 4.394 1.152h5.342c1.644 0 3.138.021 4.308-1.152 1.171-1.17 1.206-2.719 1.206-4.362V7.328c0-1.643-.027-3.16-1.206-4.343-1.331-1.332-2.664-1.17-4.308-1.17zM10 13.247a3.247 3.247 0 1 0 0-6.494 3.247 3.247 0 0 0 0 6.494zM10 15a5 5 0 1 1 0-10 5 5 0 0 1 0 10zm5-10a1 1 0 1 1 0-2 1 1 0 0 1 0 2z" fill="#111314" fill-rule="evenodd"></path></svg></a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
